MDL-39820 theme_bootstrapbase: Fix form button alignment for badges.

--- a/theme/bootstrapbase/less/moodle/buttons.less
+++ b/theme/bootstrapbase/less/moodle/buttons.less
@@ -17,7 +17,8 @@ select + input[type="submit"],
 input[type="text"] + input[type="button"],
 input[type="password"] + input[type="submit"],
 input[type="text"] + button,
-input[type="text"] + input[type="submit"] {
+input[type="text"] + input[type="submit"],
+input[type="submit"] + input[type="submit"] {
     margin: 0 0 10px 5px;
 }
 p.arrow_button {
